# nsm

./: Makefile  Makefile.am  Makefile.in  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  ls  ls.pub  main  main.c
.deps/: main.Po
autom4te.cache/: output.1  requests  traces.0  traces.1
